[tool.poetry]
name = "svgtrace"
version = "2024"
license = "mit"
description = "Leverage playwright and the imagetrace.js library to trace a bitmap to svg in python"
authors = ["FredHappyface"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Multimedia :: Graphics",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/SvgTrace"
repository = "https://github.com/FHPythonUtils/SvgTrace"
documentation = "https://github.com/FHPythonUtils/SvgTrace/blob/master/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
playwright = "<2,>=1.40.0"
install-playwright = "<2,>=0.0.1"
scikit-image = "<2,>=0.22.0"
pillow = "<11,>=10.2.0"
numpy = "<2,>=1.26.3"

[tool.poetry.group.dev.dependencies]
nocairosvg = "^2023.1"
pytest = "^7.4.4"
pylint = "^3.0.3"
handsdown = "^2.1.0"
coverage = "^7.4.0"
imgcompare = "^2.0.1"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
indent = "Tab"

[tool.pydocstyle]
convention = "google"
ignore = "D205,D415"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.basic]
argument-naming-style = "camelCase"
attr-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"
variable-naming-style = "camelCase"

[tool.pylint.format]
indent-string = "\t"

[tool.pylint.master]
ignore-paths = ["tests"]

[tool.pylint.messages_control]
enable = ["F", "E", "W", "R", "C"]
disable = ["pointless-string-statement", "superfluous-parens"]

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
	py311
	py310
	py39

[testenv]
deps =
	nocairosvg
	pytest
	imgcompare
commands = pytest tests
"""
