[tool.poetry]
name = "svgtrace"
version = "2024"
license = "mit"
description = "Leverage playwright and the imagetrace.js library to trace a bitmap to svg in python"
authors = ["FredHappyface"]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Multimedia :: Graphics",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/SvgTrace"
repository = "https://github.com/FHPythonUtils/SvgTrace"
documentation = "https://github.com/FHPythonUtils/SvgTrace/blob/master/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
playwright = "<2,>=1.42.0"
install-playwright = "<2,>=0.0.1"
scikit-image = "<2,>=0.22.0"
pillow = "<11,>=10.2.0"
numpy = "<2,>=1.26.4"

[tool.poetry.group.dev.dependencies]
nocairosvg = "^2024"
pytest = "^8.1.1"
pylint = "^3.1.0"
handsdown = "^2.1.0"
coverage = "^7.4.4"
imgcompare = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"ANN101",  # type annotation for self in method
	"COM812",  # enforce trailing comma
	"D2",  # pydocstyle formatting
	"ISC001",
	"N",  # pep8 naming
	"PLR09",  # pylint refactor too many
	"TCH",  # type check blocks
	"W191"  # ignore this to allow tabs
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["D", "S101", "E402"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
line-ending = "lf"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.coverage.run]
branch = true

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
	py311
	py310
	py39

[testenv]
deps =
	nocairosvg
	pytest
	imgcompare
commands = pytest tests
"""
